# OpenMesh

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.sh
include/: Config.h.in
src/: main.c
